--- a/hige/bower.json
+++ b/hige/bower.json
@@ -2,26 +2,27 @@
   "name": "myPath",
   "version": "0.0.0",
   "dependencies": {
-    "jquery": "~1.11.2",
-    "angular-cookies": "~1.3.4",
-    "angular-touch": "~1.3.4",
-    "angular-sanitize": "~1.3.4",
-    "angular-resource": "~1.3.4",
-    "angular-ui-router": "~0.2.13",
-    "bootstrap": "~3.3.1",
     "angular": "1.2.x",
-    "fontawesome": "~4.3.0",
     "angular-bootstrap": "~0.12.1",
+    "angular-cookies": "~1.3.4",
+    "angular-drag-and-drop-lists": "dndLists#~1.3.0",
+    "angular-resource": "~1.3.4",
+    "angular-sanitize": "~1.3.4",
+    "angular-soap": "~2.1.0",
+    "angular-touch": "~1.3.4",
+    "angular-ui-router": "~0.2.13",
+    "angular-ui-utils": "bower",
+    "bootstrap": "~3.3.1",
     "browser-detection": "~1.0.1",
     "browserdetection": "~0.3.3",
     "FlashDetect": "Bartvds/FlashDetect#~1.0.4",
-    "angular-ui-utils": "bower",
-    "underscore": "~1.8.2",
+    "fontawesome": "~4.3.0",
+    "jquery": "~1.11.2",
+    "Leaflet.awesome-markers": "~2.0.2",
+    "leaflet.markercluster": "~0.4.0",
     "momentjs": "~2.9.0",
     "respond": "~1.4.2",
-    "angular-soap": "~2.1.0",
-    "Leaflet.awesome-markers": "~2.0.2",
-    "leaflet.markercluster": "~0.4.0"
+    "underscore": "~1.8.2"
   },
   "resolutions": {
     "angular": "1.2.28",
