--- a/hige/bower.json
+++ b/hige/bower.json
@@ -25,7 +25,7 @@
     "underscore": "~1.8.2"
   },
   "resolutions": {
-    "angular": "1.2.28",
+    "angular": ">= 1.0.2",
     "jquery": "1.11.2"
   },
   "devDependencies": {
